# solji-program

./: .gitignore  Cargo.toml
anchor/programs/solji_program/: Cargo.toml
anchor/programs/solji_program/src/: events.rs  global_error.rs  lib.rs
anchor/programs/solji_program/src/instructions/: donate.rs  draw_lots.rs  incense_burn.rs  incense_config.rs  mod.rs  nft_mint.rs  temple.rs  user.rs  wish.rs
anchor/programs/solji_program/src/states/: donate.rs  draw_lots.rs  incense_config.rs  mod.rs  nft_mint.rs  temple.rs  user.rs  wish.rs
anchor/programs/temple/: Cargo.toml
anchor/programs/temple/src/: error.rs  lib.rs
anchor/programs/temple/src/instructions/: burn_incense.rs  buy_incense.rs  donate.rs  draw_fortune.rs  get_shop_items.rs  get_temple_level.rs  get_user_amulets.rs  get_user_profile.rs  incense.rs  init_config_accounts.rs  init_leaderboard.rs  mint_amulet_nft.rs  mint_buddha_nft.rs  mint_medal_nft.rs  mod.rs  purchase_item.rs  stake_medal_nft.rs  temple.rs  user.rs
anchor/programs/temple/src/instructions/admin/: create_nft_mint.rs  create_shop_config.rs  create_temple_config.rs  distribute_buddha_nfts.rs  init_donation_leaderboard.rs  init_incense_leaderboard.rs  mint_nft_to_user.rs  mod.rs  update_dynamic_config.rs  update_nft_uri.rs  update_temple_status.rs
anchor/programs/temple/src/instructions/amulet/: get_user_amulets.rs  mint_amulet_nft.rs  mod.rs
anchor/programs/temple/src/instructions/donation/: claim_buddha_nft.rs  donate.rs  donate_fund.rs  mint_medal_nft.rs  mod.rs  process_donation_rewards.rs
anchor/programs/temple/src/instructions/fortune/: draw_fortune.rs  mod.rs  share_fortune.rs
anchor/programs/temple/src/instructions/incense/: burn_incense.rs  burn_incense_simplied.rs  buy_incense.rs  init_incense_nft.rs  mod.rs  (+1 more)
anchor/programs/temple/src/state/: amulet.rs  badge_nft.rs  buddha_nft.rs  buy_incense.rs  donation.rs  donation_leaderboard.rs  event.rs  fortune_nft.rs  global_stats.rs  incense.rs  incense_nft.rs  leaderboard.rs  medal_nft.rs  mod.rs  shop_config.rs  shop_item.rs  temple.rs  temple_config.rs  user.rs  user_state.rs  wish.rs  wish_tower.rs  wish_tower_nft.rs
solji-backend/: Cargo.toml
solji-backend/src/: main.rs
solji-backend/src/indexer/: fetcher.rs
(+114 files in other folders)
