[package]
name = "solji-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. 异步运行时和 Web 框架
tokio = { version = "1", features = ["full"] }
axum = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"                                    # 异步日志
tracing-subscriber = "0.3"

# 2. Solana 客户端和 SDK
solana-client = "3.0.4" # 请保持与您的 solana-cli 版本接近
solana-sdk = "3.0.0"
bs58 = "0.5.1"
base64 = "0.22.1"

# **重要:** 引入您的链上程序依赖
# 允许后端服务导入并反序列化链上程序的账户结构
temple = { path = "../anchor/programs/temple", features = ["idl-build"] }
anchor-lang = { version = "0.31.1", features = ["derive"] }               # 需要 derive macro

# 3. 数据库
# 这里使用 SQLx 和 PostgreSQL
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15"                                                                 # 用于加载 .env 配置文件
chrono = "0.4"                                                                   # 时间处理
