[package]
name = "temple"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "temple"

[features]
default = []
# cpi = ["no-entrypoint"]
no-entrypoint = []
# no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
localnet = []
devnet = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
pyth-solana-receiver-sdk = "1.0.1"
switchboard-on-demand = "0.9.0"
